<resources>
    <string name="app_name">todo-application</string>
    <string name="delete">Delete</string>
    <string name="activity_name">enter title</string>
    <string name="save">save</string>
    <string name="cancel">Back</string>
    <string name="empty_task">Empty Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_descriptions">Task Description</string>
    <string name="add_task">Add Task</string>
    <string name="save_changes">Save Changes</string>
    <string name="add">Add</string>
    <string name="enter_title">Enter title</string>
</resources>