<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/new_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/task_title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/enter_activity_title"
        android:hint="@string/enter_title"
        android:labelFor="@id/enter_activity_title"
        android:layout_width="match_parent"
        android:inputType="text"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/enter_activity_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/task_descriptions"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/enter_activity_details"
        android:labelFor="@id/enter_activity_details"
        android:inputType="text"
        android:hint="enter task details here"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/add_task"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:text="@string/add_task"
        android:visibility="visible" />
</LinearLayout>